# crypto.rs

./: CHANGELOG.md  Cargo.toml  README.md
.changes/: add-aes-cbc.md
src/: aes_cbc.rs  ed25519.rs  lib.rs  nistp256.rs  secp256k1.rs  x25519.rs  x448.rs
src/ciphers/: aes.rs  aes_cbc.rs  chacha.rs  macros.rs  mod.rs  traits.rs
src/signature/: aggregated.rs
src/signature/aggregated/: collect.rs  internal.rs  tests.rs
tests/: aes_cbc.rs  cipher.rs
tests/fixtures/: aes_128_cbc_hmac_sha_256.rs  aes_128_gcm.rs  aes_192_cbc_hmac_sha_384.rs  aes_192_gcm.rs  aes_256_cbc_hmac_sha_512.rs  aes_256_gcm.rs  chacha20_poly1305.rs  xchacha20_poly1305.rs
