[package]
name = "iota-crypto"
version = "0.2.0"
license = "Apache-2.0"
authors = [
  "Gustav Behm <gustav.behm@iota.org>",
  "Daniel Thompson-Yvetot <daniel.yvetot@iota.org>"
]
edition = "2018"
readme = "README.md"
keywords = [ "iota", "cryptography", "security" ]
categories = [ "security" ]
description = "The canonical source of cryptographic ground-truth for all IOTA Rust projects"
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/crypto.rs"

[lib]
name = "crypto"

[features]
default = [ ]
alloc = [ ]
aes-cbc = [ "aes-crate", "aead", "block-modes", "cipher", "hmac", "sha", "subtle" ]
aes-kw = [ "aes-crate" ]
chacha = [ "aead", "chacha20poly1305", "cipher" ]
ed25519 = [ "ed25519-zebra" ]
random = [ "getrandom" ]
aes = [ "aead", "aes-gcm", "cipher" ]
blake2b = [ "blake2b_simd" ]
curl-p = [ "bee-ternary" ]
sha = [ "sha2" ]
hmac = [ "hmac_" ]
pbkdf = [ "pbkdf2" ]
bip39 = [ "pbkdf", "hmac", "sha", "pbkdf", "unicode-normalization" ]
bip39-en = [ "bip39" ]
bip39-jp = [ "bip39" ]
cipher = [ "generic-array" ]

nist-p256 = ["p256", "signature"]
secp256k1 = ["k256", "signature"]
x25519 = ["x25519-dalek"]
x448 = ["x448-crate"]

[dependencies]
chacha20poly1305 = { version = "0.7.1", optional = true }
k256 = { version = "0.7", default-features = false, features = ["ecdh", "ecdsa", "sha256"], optional = true }
p256 = { version = "0.7", default-features = false, features = ["ecdh", "ecdsa"], optional = true }
p384 = { version = "0.6", default-features = false, features = ["ecdsa", "sha384", "zeroize"], optional = true }
signature = { version = "1.2", default-features = false, optional = true }
x25519-dalek = { version = "1.1", default-features = false, features = ["u64_backend"], optional = true }
x448-crate = { version = "0.6", default-features = false, optional = true, package = "x448" }

  [dependencies.ed25519-zebra]
  version = "2.2.0"
  optional = true
  default-features = false

  [dependencies.getrandom]
  version = "0.2.0"
  optional = true
  default-features = false

  [dependencies.aes-crate]
  version = "0.6"
  package = "aes"
  optional = true
  default-features = false

  [dependencies.aead]
  version = "0.3"
  optional = true
  default-features = false

  [dependencies.generic-array]
  version = "0.14"
  optional = true
  default-features = false

  [dependencies.aes-gcm]
  version = "0.8.0"
  optional = true
  features = [ "aes" ]
  default-features = false

  [dependencies.blake2b_simd]
  version = "0.5.11"
  optional = true
  default-features = false

  [dependencies.block-modes]
  version = "0.7"
  default-features = false
  optional = true

  [dependencies.bee-ternary]
  version = "0.3.4-alpha"
  optional = true
  default-features = false

  [dependencies.sha2]
  version = "0.9.2"
  optional = true
  default-features = false

  [dependencies.subtle]
  version = "2.4"
  default-features = false
  optional = true

  [dependencies.hmac_]
  version = "0.10.1"
  package = "hmac"
  optional = true
  default-features = false

  [dependencies.pbkdf2]
  version = "0.6.0"
  optional = true
  default-features = false

  [dependencies.rand]
  version = "0.7"
  optional = true
  default-features = false

  [dependencies.unicode-normalization]
  version = "0.1.16"
  optional = true
  default-features = false

[dev-dependencies]
hex = "0.4.2"
rand = "0.7.3"
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
# A workaround to enable support for using crate::test_utils in tests/
#
# More Info: https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
iota-crypto = { path = ".", features = ["alloc", "rand"] }
